updates and styling

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
     <meta charset="utf-8">
     <title>Peer Group Project 1</title>
     <meta name="description" content="Webpage">
+    <link rel="stylesheet" href="styles.css">
     <script src="group_01.js"></script>
-    <link rel="stylesheet" href="">
   </head>
 
   <body>
-    <input type="text" id='nameIn' placeholder="Enter Name"> <br />
-    <button onclick='displayCompensation()'>Calculate Bonus and Compensation</button>
+    <input type="text" id='nameIn' placeholder="Enter Employee Name"> <br />
+    <button class="button" onclick='displayCompensation()'>Calculate Bonus and Compensation</button>
     <div id='displayArea'>
     </div>
   </body>
